solve some overflow errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,8 @@ body {
 
 .nav-site {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 540px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -411,7 +413,7 @@ body {
 
 .user-login {
   background-image: url("../img/log-in-icon.svg");
-  background-position: 16px 50%;
+  background-position: 18px 50%;
 }
 
 .login-form {
@@ -602,7 +604,7 @@ body {
 
 .user-cart-full {
   background-image: url("../img/full-cart-icon-black.svg");
-  background-position: calc(50% - 34px) 50%;
+  background-position: 16px 50%;
 }
 
 .user-link:hover {
@@ -649,7 +651,7 @@ body {
 }
 
 .slider-text-list {
-  max-width: 540px;
+  width: 540px;
 }
 
 .slider-text-item {
@@ -941,6 +943,7 @@ body {
 .product-card {
   margin-top: 51px;
   padding: 0 40px 24px 40px;
+  max-width: 270px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -957,8 +960,9 @@ body {
 }
 
 .product-card-title {
-  margin-top: auto;
+  margin-top: 0;
   margin-bottom: 8px;
+  width: 100%;
   text-align: center;
   font-weight: 700;
   font-size: 20px;
@@ -969,11 +973,13 @@ body {
 .product-card-description {
   margin-top: 0;
   margin-bottom: 20px;
+  width: 100%;
   text-align: center;
 }
 
 .product-card-price {
   margin-right: auto;
+  max-width: 140px;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -984,6 +990,7 @@ body {
   height: 32px;
   width: 32px;
   margin-top: -3px;
+  margin-left: auto;
   padding: 8px;
   background-color: var(--special-extra-bright);
   border-radius: 26px;
